# libjam

./: .gitignore  .readthedocs.yaml  README.md  captain.py  drawer.py  example.py  notebook.py  pyproject.toml  ruff.toml  typewriter.py
docs/: captain.rst  conf.py  drawer.rst  flashcard.rst  index.rst  path.rst  secretary.rst  writer.rst
docs/static/: style.css
hooks/: pre-commit
libjam/: __init__.py  captain.py  clipboard.py  cloud.py  drawer.py  extract_functions.py  flashcard.py  notebook.py  path.py  secretary.py  typewriter.py  writer.py
