[project]
name = "libjam"
description = "A library jam for Python."
version = "0.1.9"

readme = "README.md"
license = "GPL-2.0"
license-files = ["LICEN[CS]E*"]

classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

requires-python = ">= 3.14"
dependencies = [
  "toml >= 0.10.0",
  "platformdirs >= 4.0.0",
  "filetype >= 1.0.0",
  "py7zr >= 1.0.0",
  "rarfile >= 4.0",
  "requests >= 2.0.0",
]

[[project.authors]]
name = "Philipp Kosarev"
email = "philipp.kosarev@gmail.com"

[project.urls]
Homepage = "https://github.com/philippkosarev/libjam"
Issues = "https://github.com/philippkosarev/libjam/issues"

[dependency-groups]
docs = [
  "sphinx (>=9.1.0,<10.0.0)",
  "sphinx-toolbox (>=4.1.2,<5.0.0)",
  "pydata-sphinx-theme (>=0.17.1,<0.18.0)",
  "sphinx-copybutton (>=0.5.2,<0.6.0)",
  "pypandoc (>=1.17,<2.0)",
  "pypandoc-binary (>=1.17,<2.0)",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
include = ["libjam"]
