[project]
name = "libjam"
description = "A library jam for Python."
version = "0.1.9"

readme = "README.md"
license = "GPL-2.0"
license-files = ["LICEN[CS]E*"]

classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

requires-python = ">= 3.14"
dependencies = [
  "platformdirs >= 4.0.0",
  "filetype >= 1.0.0",
  "py7zr >= 1.0.0",
  "rarfile >= 4.0",
]

[[project.authors]]
name = "Philipp Kosarev"
email = "philipp.kosarev@gmail.com"

[project.urls]
Homepage = "https://github.com/philippkosarev/libjam"
Issues = "https://github.com/philippkosarev/libjam/issues"

[dependency-groups]
docs = [
  "sphinx",
  "sphinx-toolbox",
  "pydata-sphinx-theme",
  "sphinx-copybutton",
  "pypandoc",
  "pypandoc-binary",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
include = ["libjam"]
